--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.gitignore
 # Compiled class file
 *.class
 
@@ -21,3 +22,12 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Local
+target/
+.DS_Store
+.classpath
+.project
+.settings/
+.vscode/
+countLine.sh
