--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,11 @@
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
+      <artifactId>kms</artifactId>
+      <version>2.5.71</version>
+    </dependency>
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
       <artifactId>iam</artifactId>
       <version>2.5.71</version>
     </dependency>
