--- a/pom.xml
+++ b/pom.xml
@@ -6,127 +6,146 @@
   <version>1.0-SNAPSHOT</version>
   <name>watool</name>
   <url>http://maven.apache.org</url>
+  <dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-bom</artifactId>
+            <version>1.11.428</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+</dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>core</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
       <type>pom</type>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>protocol-core</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>sts</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>autoscaling</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>autoscalingplans</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>cloudwatch</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>cloudwatchevents</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>cloudwatchlogs</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>config</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>ec2</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>ecr</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>ecs</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>elasticache</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>elasticloadbalancing</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>elasticloadbalancingv2</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>elasticsearch</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>emr</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>health</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>kms</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>iam</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>lambda</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>rds</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>rdsdata</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
     </dependency>
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>redshift</artifactId>
-      <version>2.5.71</version>
+      <version>2.7.14</version>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-s3</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-ec2</artifactId>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
