--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,11 @@
       <artifactId>aws-java-sdk-ec2</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.reflections</groupId>
+      <artifactId>reflections</artifactId>
+      <version>0.9.11</version>
+    </dependency>
+    <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
